; ModuleID = '/home/carl/AnghaBench/vlc/src/os2/extr_thread.c_vlc_entry.c'
source_filename = "/home/carl/AnghaBench/vlc/src/os2/extr_thread.c_vlc_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_thread = type { i32, i32, i32, i32 (i32)* }

@thread_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @vlc_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_entry(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vlc_thread*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.vlc_thread*
  store %struct.vlc_thread* %5, %struct.vlc_thread** %3, align 8
  %6 = load i32, i32* @thread_key, align 4
  %7 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %8 = call i32 @vlc_threadvar_set(i32 %6, %struct.vlc_thread* %7)
  %9 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %10 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %9, i32 0, i32 0
  store i32 1, i32* %10, align 8
  %11 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %12 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %11, i32 0, i32 3
  %13 = load i32 (i32)*, i32 (i32)** %12, align 8
  %14 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %15 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i32 %13(i32 %16)
  %18 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %19 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 8
  %20 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %21 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @DosPostEventSem(i32 %22)
  %24 = load %struct.vlc_thread*, %struct.vlc_thread** %3, align 8
  %25 = call i32 @vlc_thread_cleanup(%struct.vlc_thread* %24)
  ret void
}

declare dso_local i32 @vlc_threadvar_set(i32, %struct.vlc_thread*) #1

declare dso_local i32 @DosPostEventSem(i32) #1

declare dso_local i32 @vlc_thread_cleanup(%struct.vlc_thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
